--- a/client/src/components/StatusDot.scss
+++ b/client/src/components/StatusDot.scss
@@ -44,7 +44,7 @@
       z-index: 1;// Adjust spacing between dots
   
       &.approved {
-        background-color: rgb(3, 191, 3);
+        background-color: #06D001;
       }
   
       &.pending {
