--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,12 @@
 @tailwind utilities;
 
 body{
+    scrollbar-width: none; /* hides scrollbar in Firefox */
+    -ms-overflow-style: none; /* hides scrollbar in IE and Edge */
     background-color: #dcedf4;
+}
+
+body::-webkit-scrollbar {
+    width: 0;
+    background: transparent; /* optional: just to hide scrollbar, might still affect layout */
 }
